--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.devskiller.friendly-id</groupId>
+			<artifactId>friendly-id-spring-boot-starter</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
