--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.profiles.active=test
-server.port=8181
+server.port=8080
+
+aws.access_key_id=${AWS_KEY}
+aws.secret_access_key=${AWS_SECRET}
+s3.bucket=forum-ng
+s3.region=sa-east-1
