--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ aws.access_key_id=${AWS_KEY}
 aws.secret_access_key=${AWS_SECRET}
 s3.bucket=forum-ng
 s3.region=sa-east-1
+
+spring.thymeleaf.cache=false
